tests/baselines/reference/jsFileCompilationPublicParameterModifier.errors.txt
error TS5055: Cannot write file 'tests/cases/compiler/a.js' because it would overwrite input file.
  Adding a tsconfig.json file will help organize projects that contain both TypeScript and JavaScript files. Learn more at https://aka.ms/tsconfig.
tests/cases/compiler/a.js(1,23): error TS8012: Parameter modifiers can only be used in TypeScript files.


!!! error TS5055: Cannot write file 'tests/cases/compiler/a.js' because it would overwrite input file.
!!! error TS5055:   Adding a tsconfig.json file will help organize projects that contain both TypeScript and JavaScript files. Learn more at https://aka.ms/tsconfig.
==== tests/cases/compiler/a.js (1 errors) ====
    class C { constructor(public x) { }}
                          ~~~~~~
!!! error TS8012: Parameter modifiers can only be used in TypeScript files.